force-app/main/default/objects/PDF_ESignature_Setting__mdt/PDF_ESignature_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Default configuration for PDF-first e-signature.</description>
    <label>E-Signature Setting</label>
    <pluralLabel>E-Signature Settings</pluralLabel>
</CustomObject>