force-app/main/default/objects/PDF_ESignature_Setting__mdt/fields/Default_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Expiration_Days__c</fullName>
    <label>Default Expiration Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>