force-app/main/default/objects/PDF_ESignature_Setting__mdt/fields/Default_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_From_Email__c</fullName>
    <label>Default From Email</label>
    <type>Email</type>
</CustomField>