force-app/main/default/objects/PDF_ESignature_Setting__mdt/fields/Finalizer_Callback_Secret__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Callback_Secret__c</fullName>
    <description>Shared secret sent to Power Automate and required on the finalizer callback. Change this value before production.</description>
    <label>Finalizer Callback Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>