force-app/main/default/objects/PDF_ESignature_Setting__mdt/fields/Site_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_Base_URL__c</fullName>
    <label>Site Base URL</label>
    <type>Url</type>
</CustomField>